--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>うんこ💩</h1>
-<p>おはこんばんちわ</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>うんちっち</title>
+</head>
+<body>  
+  <h1>うんこ💩</h1>
+  <p>おはこんばんちわ</p>
+</body>
+</html>
