--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>  
   <h1>うんこ💩</h1>
   <p>おはこんばんちわ</p>
+  <p>うんちっち～😚😚😑\(￣︶￣*\))
+    <p><img fff="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjrEA06CVtSY82J6odeUlX6sSQDnTgsOwzFoPlNZCX&s"alt="ウンチ"/>
 </body>
 </html>
